--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="js/game.js"></script>
+    <script src="models/movable-object.class.js"></script>
+    <script src="models/character.class.js"></script>
+    <script src="models/chicken.class.js"></script>
+    <script src="models/world.class.js"></script>
     <title>Document</title>
 </head>
 <body onload="init()">
@@ -12,7 +16,7 @@
         <h1>El pollo Loco</h1>
 
 
-        <canvas width="720" height="480">
+        <canvas width="1020" height="980">
 
         </canvas>
 </body>
