background fixed and possitioned

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>El pollo Loco</h1>
 
 
-        <canvas width="1020" height="980">
+        <canvas id="canvas" width="1020" height="720">
 
         </canvas>
 </body>
