--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="models/world.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
+    <script src="models/gameOver.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="levels/lvl1.js"></script>
